--- a/app/src/main/res/layout/cv_fragment.xml
+++ b/app/src/main/res/layout/cv_fragment.xml
@@ -10,11 +10,11 @@
             type="com.atimi.cvapp.ui.main.CvViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.main.CvFragment">
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.main.CvFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -22,6 +22,6 @@
             android:layout_height="match_parent"
             app:entries="@{cvViewModel.entries}" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </layout>
