Polish the UI a little bit

--- a/app/src/main/res/layout/experience_entry_view.xml
+++ b/app/src/main/res/layout/experience_entry_view.xml
@@ -5,6 +5,12 @@
 
     <data>
         <variable
+            name="company"
+            type="String" />
+        <variable
+            name="timeframe"
+            type="String" />
+        <variable
             name="description"
             type="String" />
     </data>
@@ -14,11 +20,43 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/companyTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="@{company}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Company" />
+
+        <TextView
+            android:id="@+id/timeframeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:text="@{timeframe}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            app:layout_constraintBaseline_toBaselineOf="@+id/companyTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="1900-2000" />
+
+        <TextView
             android:id="@+id/descriptionTextView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
             android:text="@{description}"
-            android:textSize="16sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/companyTextView"
             tools:text="Description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
