--- a/app/src/main/res/layout/personal_details_view.xml
+++ b/app/src/main/res/layout/personal_details_view.xml
@@ -20,9 +20,10 @@
             android:id="@+id/nameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:text="@{name}"
-            android:textSize="20sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toStartOf="@+id/surnameTextView"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Name" />
@@ -31,8 +32,10 @@
             android:id="@+id/surnameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:text="@{surname}"
-            android:textSize="20sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Surname" />
