Organize imports and reformat code

--- a/app/src/main/res/layout/personal_statement_view.xml
+++ b/app/src/main/res/layout/personal_statement_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="statement"
             type="String" />
@@ -38,8 +39,7 @@
             android:background="@color/colorSeparator"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
